Prepared plugin infrastructure to work with versioned plugins and dependencies and added versioning to part of `HL.GP` plugins. #864 (Plugins should have an a version)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2750 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.GP.Interfaces/3.3/HeuristicLab.GP.Interfaces-3.3.csproj
+++ b/sources/HeuristicLab.GP.Interfaces/3.3/HeuristicLab.GP.Interfaces-3.3.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="HeuristicLabGPInterfacesPlugin.cs.frame" />
     <Compile Include="FunctionTreeIterator.cs" />
     <Compile Include="IFunctionTreeSerializer.cs">
       <SubType>Code</SubType>
@@ -118,6 +119,7 @@ set ProjectDir=$(ProjectDir)
 set SolutionDir=$(SolutionDir)
 set Outdir=$(Outdir)
 
-call PreBuildEvent.cmd</PreBuildEvent>
+call PreBuildEvent.cmd
+SubWCRev "%25ProjectDir%25/" "%25ProjectDir%25/HeuristicLabGPInterfacesPlugin.cs.frame" "%25ProjectDir%25/HeuristicLabGPInterfacesPlugin.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
