--- a/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
+++ b/sources/HeuristicLab.Common/3.2/HeuristicLab.Common-3.2.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CancelEventArgs.cs" />
+    <None Include="HeuristicLabCommonPlugin.cs.frame" />
     <Compile Include="TypeExtensions.cs" />
     <Compile Include="ObservableList.cs" />
     <Compile Include="DoubleExtensions.cs">
@@ -119,6 +120,7 @@ set ProjectDir=$(ProjectDir)
 set SolutionDir=$(SolutionDir)
 set Outdir=$(Outdir)
 
-call PreBuildEvent.cmd</PreBuildEvent>
+call PreBuildEvent.cmd
+SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabCommonPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabCommonPlugin.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
