--- a/sources/HeuristicLab.Persistence.GUI/3.3/HeuristicLab.Persistence.GUI-3.3.csproj
+++ b/sources/HeuristicLab.Persistence.GUI/3.3/HeuristicLab.Persistence.GUI-3.3.csproj
@@ -84,6 +84,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="HeuristicLabPersistenceGUIPlugin.cs.frame" />
     <Compile Include="HeuristicLabPersistenceGUIPlugin.cs" />
     <Compile Include="PersistenceConfigurationForm.cs">
       <SubType>Form</SubType>
@@ -119,6 +120,7 @@ set ProjectDir=$(ProjectDir)
 set SolutionDir=$(SolutionDir)
 set Outdir=$(Outdir)
 
-call PreBuildEvent.cmd</PreBuildEvent>
+call PreBuildEvent.cmd
+SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabPersistenceGUIPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabPersistenceGUIPlugin.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
