--- a/sources/HeuristicLab.Data.Views/3.3/HeuristicLab.Data.Views-3.3.csproj
+++ b/sources/HeuristicLab.Data.Views/3.3/HeuristicLab.Data.Views-3.3.csproj
@@ -56,6 +56,7 @@
     <Compile Include="BoolDataView.Designer.cs">
       <DependentUpon>BoolDataView.cs</DependentUpon>
     </Compile>
+    <None Include="HeuristicLabDataViewsPlugin.cs.frame" />
     <Compile Include="StringConvertibleDataView.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -119,6 +120,7 @@ set ProjectDir=$(ProjectDir)
 set SolutionDir=$(SolutionDir)
 set Outdir=$(Outdir)
 
-call PreBuildEvent.cmd</PreBuildEvent>
+call PreBuildEvent.cmd
+SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabDataViewsPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabDataViewsPlugin.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
