--- a/sources/HeuristicLab.MainForm/3.2/HeuristicLab.MainForm-3.2.csproj
+++ b/sources/HeuristicLab.MainForm/3.2/HeuristicLab.MainForm-3.2.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="HeuristicLabMainFormPlugin.cs.frame" />
     <Compile Include="Interfaces\IContentView.cs" />
     <Compile Include="Interfaces\IActionUserInterfaceItem.cs" />
     <Compile Include="Interfaces\IPositionableUserInterfaceItem.cs" />
@@ -126,6 +127,7 @@ set ProjectDir=$(ProjectDir)
 set SolutionDir=$(SolutionDir)
 set Outdir=$(Outdir)
 
-call PreBuildEvent.cmd</PreBuildEvent>
+call PreBuildEvent.cmd
+SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabMainFormPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabMainFormPlugin.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
