--- a/sources/HeuristicLab.Parameters/3.3/HeuristicLab.Parameters-3.3.csproj
+++ b/sources/HeuristicLab.Parameters/3.3/HeuristicLab.Parameters-3.3.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="HeuristicLabParametersPlugin.cs.frame" />
     <Compile Include="SubScopesItemParameter.cs" />
     <Compile Include="ScopeParameter.cs" />
     <Compile Include="HeuristicLabParametersPlugin.cs" />
@@ -92,6 +93,7 @@ set ProjectDir=$(ProjectDir)
 set SolutionDir=$(SolutionDir)
 set Outdir=$(Outdir)
 
-call PreBuildEvent.cmd</PreBuildEvent>
+call PreBuildEvent.cmd
+SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabParametersPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabParametersPlugin.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
