--- a/sources/HeuristicLab.GP.StructureIdentification.TimeSeries/3.3/HeuristicLab.GP.StructureIdentification.TimeSeries-3.3.csproj
+++ b/sources/HeuristicLab.GP.StructureIdentification.TimeSeries/3.3/HeuristicLab.GP.StructureIdentification.TimeSeries-3.3.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AveragePercentageChangeEvaluator.cs" />
+    <None Include="HeuristicLabGPTimeSeriesPlugin.cs.frame" />
     <Compile Include="HeuristicLabGPTimeSeriesPlugin.cs" />
     <Compile Include="OffspringSelectionGPTimeSeriesPrognosis.cs" />
     <Compile Include="ProfitEvaluator.cs" />
@@ -152,6 +153,7 @@ set ProjectDir=$(ProjectDir)
 set SolutionDir=$(SolutionDir)
 set Outdir=$(Outdir)
 
-call PreBuildEvent.cmd</PreBuildEvent>
+call PreBuildEvent.cmd
+SubWCRev "%25ProjectDir%25/" "%25ProjectDir%25/HeuristicLabGPTimeSeriesPlugin.cs.frame" "%25ProjectDir%25/HeuristicLabGPTimeSeriesPlugin.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
