added transport plugin for netron (ticket #867)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2772 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.ExtLibs/HeuristicLab.Netron/3.0.2672.12446/Netron.Diagramming.Core-3.0.2672.12446/Netron.Diagramming.Core-3.0.2672.12446.csproj
+++ b/sources/HeuristicLab.ExtLibs/HeuristicLab.Netron/3.0.2672.12446/Netron.Diagramming.Core-3.0.2672.12446/Netron.Diagramming.Core-3.0.2672.12446.csproj
@@ -9,7 +9,7 @@
     <ApplicationIcon>Resources\Schema.ico</ApplicationIcon>
     <AssemblyKeyContainerName>
     </AssemblyKeyContainerName>
-    <AssemblyName>Netron.Diagramming.Core</AssemblyName>
+    <AssemblyName>Netron.Diagramming.Core-3.0.2672.12446</AssemblyName>
     <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
     <DefaultClientScript>JScript</DefaultClientScript>
     <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
