Operator architecture refactoring (#95)  * worked on parameters and operators
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2773 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Operators.Views/3.3/HeuristicLab.Operators.Views-3.3.csproj
+++ b/sources/HeuristicLab.Operators.Views/3.3/HeuristicLab.Operators.Views-3.3.csproj
@@ -57,11 +57,17 @@
       <DependentUpon>CombinedOperatorView.cs</DependentUpon>
     </Compile>
     <None Include="HeuristicLabOperatorsViewsPlugin.cs.frame" />
-    <Compile Include="MultipleSuccessorsOperatorView.cs">
+    <Compile Include="MultipleCallsOperatorView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="MultipleSuccessorsOperatorView.Designer.cs">
-      <DependentUpon>MultipleSuccessorsOperatorView.cs</DependentUpon>
+    <Compile Include="MultipleCallsOperatorView.Designer.cs">
+      <DependentUpon>MultipleCallsOperatorView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ValuesCollectorView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ValuesCollectorView.Designer.cs">
+      <DependentUpon>ValuesCollectorView.cs</DependentUpon>
     </Compile>
     <Compile Include="HeuristicLabOperatorsViewsPlugin.cs" />
     <Compile Include="OperatorView.cs">
